--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -34,7 +34,7 @@
   justify-content: space-between; /* Space between left and right sections */
   align-items: center;
   padding: 10px 20px;
-  background-color: #333;
+  background-color: #1e1e1e;
   border-radius: 5px;
   width: 100%;
   max-width: 1200px;
@@ -62,17 +62,26 @@
 
 .nav-item.left,
 .nav-item.center {
-  background-color: #4caf50;
+  background-color: #295442;
+}
+
+.nav-item.left:hover,
+.nav-item.center:hover {
+  background-color: #1f4032;
 }
 
 .nav-item.profile-btn {
   background-color: #f39c12; /* Orange for profile-related buttons */
 }
 
+.nav-item.profile-btn:hover {
+  background-color: #cc8310; /* Orange for profile-related buttons */
+}
+
 .nav-item.settings-btn {
   background-color: #e74c3c; /* Red for settings buttons */
 }
 
-.nav-item:hover {
-  background-color: rgba(85, 85, 85, 0.8);
+.nav-item.settings-btn:hover {
+  background-color: #ba3d30; /* Red for settings buttons */
 }
